# Capsule

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md
demo/demo-node/: index.js
demo/demo-python/: app.py
demo/demo-ts/: app.ts
src/: cli.rs  main.rs
src/adapters/: mod.rs  node.rs  python.rs  typescript.rs
src/core/: cache.rs  clean.rs  command.rs  detector.rs  doctor.rs  inspect.rs  lockfile.rs  mod.rs  runner.rs
src/resolver/: mod.rs  node_resolver.rs  python_resolver.rs
src/scanners/: mod.rs  node_scanner.rs  python_scanner.rs
src/security/: trust.rs
src/util/: hashing.rs  paths.rs
